fix login z-index

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -425,6 +425,7 @@ input.no-canvas {
 	left: 0;
 	right: 0;
 	overflow: auto;
+	z-index: 2;
 	background: url(/img/stardust.png);
 	.login-content {
 		width: 400px;
